Feat: Employee SEarch and improve Delete By ID logic